# ocp-addons-operators-cli

./: .flake8  .pre-commit-config.yaml  .release-it.json  Dockerfile  README.md  pyproject.toml  tox.ini
app/: utils.py
app/addon_cmds/: commands.py
app/operator_cmds/: commands.py
ocp_addons_operators_cli/: cli.py  click_dict_type.py  constants.py
ocp_addons_operators_cli/addon_cmds/: commands.py
ocp_addons_operators_cli/manifests/: addons-operators.yaml.example
ocp_addons_operators_cli/operator_cmds/: commands.py
ocp_addons_operators_cli/scripts/: ocp-addons-operators-cli-build-command.py
ocp_addons_operators_cli/tests/: test_operators.py
ocp_addons_operators_cli/utils/: addon_utils.py  addons_utils.py  cli_utils.py  general.py  logger.py  operators_utils.py
